; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_tables_lpphy.c_lpphy_rev2plus_write_gain_table.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/b43/extr_tables_lpphy.c_lpphy_rev2plus_write_gain_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.b43_wldev = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }
%struct.lpphy_tx_gain_table_entry = type { i32, i32, i32, i32, i32 }

@IEEE80211_BAND_5GHZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.b43_wldev*, i32, %struct.lpphy_tx_gain_table_entry*)* @lpphy_rev2plus_write_gain_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @lpphy_rev2plus_write_gain_table(%struct.b43_wldev* %0, i32 %1, %struct.lpphy_tx_gain_table_entry* byval(%struct.lpphy_tx_gain_table_entry) align 8 %2) #0 {
  %4 = alloca %struct.b43_wldev*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.b43_wldev* %0, %struct.b43_wldev** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %8 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = icmp slt i32 %10, 2
  %12 = zext i1 %11 to i32
  %13 = call i32 @B43_WARN_ON(i32 %12)
  %14 = getelementptr inbounds %struct.lpphy_tx_gain_table_entry, %struct.lpphy_tx_gain_table_entry* %2, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = shl i32 %15, 16
  store i32 %16, i32* %6, align 4
  %17 = getelementptr inbounds %struct.lpphy_tx_gain_table_entry, %struct.lpphy_tx_gain_table_entry* %2, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = shl i32 %18, 8
  %20 = load i32, i32* %6, align 4
  %21 = or i32 %20, %19
  store i32 %21, i32* %6, align 4
  %22 = getelementptr inbounds %struct.lpphy_tx_gain_table_entry, %struct.lpphy_tx_gain_table_entry* %2, i32 0, i32 2
  %23 = load i32, i32* %22, align 8
  %24 = load i32, i32* %6, align 4
  %25 = or i32 %24, %23
  store i32 %25, i32* %6, align 4
  %26 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %27 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %26, i32 0, i32 1
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i32, i32* %28, align 4
  %30 = icmp sge i32 %29, 3
  br i1 %30, label %31, label %45

31:                                               ; preds = %3
  %32 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %33 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = call i64 @b43_current_band(i32 %34)
  %36 = load i64, i64* @IEEE80211_BAND_5GHZ, align 8
  %37 = icmp eq i64 %35, %36
  br i1 %37, label %38, label %41

38:                                               ; preds = %31
  %39 = load i32, i32* %6, align 4
  %40 = or i32 %39, 268435456
  store i32 %40, i32* %6, align 4
  br label %44

41:                                               ; preds = %31
  %42 = load i32, i32* %6, align 4
  %43 = or i32 %42, 1879048192
  store i32 %43, i32* %6, align 4
  br label %44

44:                                               ; preds = %41, %38
  br label %59

45:                                               ; preds = %3
  %46 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %47 = getelementptr inbounds %struct.b43_wldev, %struct.b43_wldev* %46, i32 0, i32 0
  %48 = load i32, i32* %47, align 4
  %49 = call i64 @b43_current_band(i32 %48)
  %50 = load i64, i64* @IEEE80211_BAND_5GHZ, align 8
  %51 = icmp eq i64 %49, %50
  br i1 %51, label %52, label %55

52:                                               ; preds = %45
  %53 = load i32, i32* %6, align 4
  %54 = or i32 %53, 335544320
  store i32 %54, i32* %6, align 4
  br label %58

55:                                               ; preds = %45
  %56 = load i32, i32* %6, align 4
  %57 = or i32 %56, 2130706432
  store i32 %57, i32* %6, align 4
  br label %58

58:                                               ; preds = %55, %52
  br label %59

59:                                               ; preds = %58, %44
  %60 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %61 = load i32, i32* %5, align 4
  %62 = add nsw i32 192, %61
  %63 = call i32 @B43_LPTAB32(i32 7, i32 %62)
  %64 = load i32, i32* %6, align 4
  %65 = call i32 @b43_lptab_write(%struct.b43_wldev* %60, i32 %63, i32 %64)
  %66 = getelementptr inbounds %struct.lpphy_tx_gain_table_entry, %struct.lpphy_tx_gain_table_entry* %2, i32 0, i32 3
  %67 = load i32, i32* %66, align 4
  %68 = shl i32 %67, 20
  store i32 %68, i32* %6, align 4
  %69 = getelementptr inbounds %struct.lpphy_tx_gain_table_entry, %struct.lpphy_tx_gain_table_entry* %2, i32 0, i32 4
  %70 = load i32, i32* %69, align 8
  %71 = shl i32 %70, 28
  %72 = load i32, i32* %6, align 4
  %73 = or i32 %72, %71
  store i32 %73, i32* %6, align 4
  %74 = load %struct.b43_wldev*, %struct.b43_wldev** %4, align 8
  %75 = load i32, i32* %5, align 4
  %76 = add nsw i32 320, %75
  %77 = call i32 @B43_LPTAB32(i32 7, i32 %76)
  %78 = load i32, i32* %6, align 4
  %79 = call i32 @b43_lptab_write(%struct.b43_wldev* %74, i32 %77, i32 %78)
  ret void
}

declare dso_local i32 @B43_WARN_ON(i32) #1

declare dso_local i64 @b43_current_band(i32) #1

declare dso_local i32 @b43_lptab_write(%struct.b43_wldev*, i32, i32) #1

declare dso_local i32 @B43_LPTAB32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
